--- a/TabibYab/AndroidManifest.xml
+++ b/TabibYab/AndroidManifest.xml
@@ -51,6 +51,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <!-- enable the search dialog to send searches to SearchableActivity -->
+        <meta-data android:name="android.app.default_searchable"
+                   android:value=".SearchActivity" />
+            
         </activity>
         
         <activity
@@ -75,6 +79,17 @@
             
         </activity>
         <activity android:name="AddCommentActivity"></activity>
+        
+        <activity android:name=".SearchActivity"
+          android:launchMode="singleTop" >
+
+        <intent-filter>
+            <action android:name="android.intent.action.SEARCH" />
+        </intent-filter>
+        <meta-data android:name="android.app.searchable"
+                   android:resource="@xml/searchable"/>
+    </activity>
+        
         
         
     </application>
