--- a/TabibYab/AndroidManifest.xml
+++ b/TabibYab/AndroidManifest.xml
@@ -33,6 +33,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:name=".MyApplication"
         android:theme="@style/AppTheme" >
         
         <meta-data android:name="com.google.android.gms.version"
@@ -45,15 +46,16 @@
         
         <activity
             android:name="com.tabibyab.MainActivity"
+            android:launchMode="singleTop"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+				<action android:name="android.intent.action.SEARCH" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <!-- enable the search dialog to send searches to SearchableActivity -->
-        <meta-data android:name="android.app.default_searchable"
-                   android:value=".SearchActivity" />
+        <meta-data android:name="android.app.searchable"
+                   android:resource="@xml/searchable"/>
             
         </activity>
         
@@ -89,7 +91,6 @@
         <meta-data android:name="android.app.searchable"
                    android:resource="@xml/searchable"/>
     </activity>
-        
         
         
     </application>
