--- a/TabibYab/AndroidManifest.xml
+++ b/TabibYab/AndroidManifest.xml
@@ -11,7 +11,7 @@
     
     
     <uses-sdk
-        android:minSdkVersion="13"
+        android:minSdkVersion="14"
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -45,14 +45,22 @@
         
         
         <activity
+            android:name="com.tabibyab.MainMenuActivity"
+            android:label="@string/app_name" >
+            
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <activity
             android:name="com.tabibyab.MainActivity"
             android:launchMode="singleTop"
             android:label="@string/app_name" >
             
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 				<action android:name="android.intent.action.SEARCH" />
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <!-- enable the search dialog to send searches to SearchableActivity -->
         <meta-data android:name="android.app.searchable"
@@ -63,6 +71,12 @@
         <activity
             android:name="com.tabibyab.AddClinicActivity"
             android:label="@string/add_clinic_activity" >
+            
+        </activity>
+        
+        <activity
+            android:name="com.tabibyab.SpecialityActivity"
+            android:label="@string/speciality" >
             
         </activity>
         
