--- a/TabibYab/AndroidManifest.xml
+++ b/TabibYab/AndroidManifest.xml
@@ -81,6 +81,12 @@
         </activity>
         
         <activity
+            android:name="com.tabibyab.FavoritesActivity"
+            android:label="@string/favorites" >
+            
+        </activity>
+        
+        <activity
             android:name="com.tabibyab.SelectLocationActivity"
             android:label="@string/add_clinic_activity" >
             
